# rust

./: README.md
journalisation_server/: Cargo.toml
journalisation_server/src/: main.rs
restychat_tp8/: Cargo.toml
restychat_tp8/src/: client.rs  lib.rs  server.rs
tp1/src/: main.rs
tp2/src/: main.rs
tp3/: Cargo.toml  livre
tp3/src/: main.rs
tp7/: Cargo.toml  README.md
tp7/src/: client.rs  dns.rs  main.rs  server.rs
websocket_tp9/: Cargo.toml  README.md
websocket_tp9/examples/: client_exemple.rs  server_exemple.rs
websocket_tp9/src/: client.rs  lib.rs  main.rs  message.rs  server.rs
