[package]
name = "tp7"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dns_client"
path = "src/client.rs"

[[bin]]
name = "dns_server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
