[package]
name = "websocket_tp9"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
url = "2.5"

[[bin]]
name = "server"
path = "examples/server_exemple.rs"

[[bin]]
name = "client"
path = "examples/client_exemple.rs"

[lib]
name = "websocket_tp9"
path = "src/lib.rs"